<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/menu_arr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white2"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tab_homepage"
            style="@style/menu_style"
            android:drawableTop="@drawable/tab_homepage_selector"
            android:text="@string/homepage" />

        <RadioButton
            android:id="@+id/tab_settingpage"
            style="@style/menu_style"
            android:drawableTop="@drawable/tab_homepage_selector"
            android:text="@string/setting" />

        <RadioButton
            android:id="@+id/tab_myself"
            style="@style/menu_style"
            android:drawableTop="@drawable/tab_myself_selector"
            android:text="@string/myself" />

    </RadioGroup>



</RelativeLayout>