<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >

    <include layout="@layout/title_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        >

        <TextView
            android:id="@+id/appText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon"
            android:layout_centerInParent="true"
            android:drawablePadding="@dimen/margin10"
            android:gravity="center"
            android:text="@string/app_name"

            />


        <TextView
            android:layout_below="@id/appText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:id="@+id/versinname"
            android:layout_marginTop="@dimen/margin20"


            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/introduce1"
        android:layout_marginBottom="10dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/introduce2"
        android:layout_marginBottom="10dp"

        />


</LinearLayout>