<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:background="@color/zhaungchebiaoqian"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin20"
                android:paddingBottom="@dimen/margin60"
                android:background="@color/green"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin10"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/my_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical" >


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:text="欢迎您"
                        android:textSize="@dimen/text20" />

                    <TextView
                        android:id="@+id/my_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="乐瞄用户"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text20" />


                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/go"
                    android:padding="@dimen/margin20"
                    android:visibility="gone"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_gravity="center_vertical"
                    />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:background="@color/white"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/mydevice_rel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/setlist_selector"
                        android:clickable="true"
                        android:orientation="horizontal"
                        >


                        <ImageView
                            android:id="@+id/img1"
                            android:visibility="visible"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/margin10"
                            android:src="@drawable/my_device" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_marginLeft="@dimen/margin10"
                            android:layout_toRightOf="@id/img1"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:drawableRight="@drawable/next"
                                android:text="@string/my_device"
                                android:paddingTop="@dimen/margin15"
                                android:paddingRight="@dimen/margin15"
                                android:paddingBottom="@dimen/margin15"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/text16" />

                            <include layout="@layout/commonview"/>

                        </LinearLayout>






                    </RelativeLayout>



                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/add_device_rel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/setlist_selector"
                        android:clickable="true"
                        android:orientation="horizontal"
                        >


                        <ImageView
                            android:id="@+id/img2"
                            android:visibility="visible"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/margin10"
                            android:src="@drawable/add_device" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_marginLeft="@dimen/margin10"
                            android:layout_toRightOf="@id/img2"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:drawableRight="@drawable/next"
                                android:text="@string/add_device"
                                android:paddingTop="@dimen/margin15"
                                android:paddingRight="@dimen/margin15"
                                android:paddingBottom="@dimen/margin15"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/text16" />

                            <include layout="@layout/commonview"/>

                        </LinearLayout>






                    </RelativeLayout>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/userinfo_rel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/setlist_selector"
                        android:clickable="true"
                        android:orientation="horizontal"
                        >


                        <ImageView
                            android:id="@+id/changepwimg"
                            android:visibility="visible"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/margin10"
                            android:src="@drawable/info" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_marginLeft="@dimen/margin10"
                            android:layout_toRightOf="@id/changepwimg"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:drawableRight="@drawable/next"
                                android:text="@string/persioninfo"
                                android:paddingTop="@dimen/margin15"
                                android:paddingRight="@dimen/margin15"
                                android:paddingBottom="@dimen/margin15"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/text16" />

                            <include layout="@layout/commonview"/>

                        </LinearLayout>






                    </RelativeLayout>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/changepwd_rel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/setlist_selector"
                        android:clickable="true"
                        android:orientation="horizontal"
                        >


                        <ImageView
                            android:id="@+id/img3"
                            android:visibility="visible"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/margin10"
                            android:src="@drawable/pwd" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_marginLeft="@dimen/margin10"
                            android:layout_toRightOf="@id/img3"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:drawableRight="@drawable/next"
                                android:text="@string/ModifyPassword"
                                android:paddingTop="@dimen/margin15"
                                android:paddingRight="@dimen/margin15"
                                android:paddingBottom="@dimen/margin15"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/text16" />



                        </LinearLayout>






                    </RelativeLayout>



                </LinearLayout>


                <LinearLayout
                    android:id="@+id/update_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/update_rel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/setlist_selector"
                        android:clickable="true"
                        android:orientation="horizontal"
                        >


                        <ImageView
                            android:id="@+id/img4"
                            android:visibility="visible"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/margin10"
                            android:src="@drawable/update" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_marginLeft="@dimen/margin10"
                            android:layout_toRightOf="@id/img4"
                            android:layout_height="wrap_content">

                            <include layout="@layout/commonview"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:drawableRight="@drawable/next"
                                android:text="@string/update"
                                android:paddingTop="@dimen/margin15"
                                android:paddingRight="@dimen/margin15"
                                android:paddingBottom="@dimen/margin15"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/text16" />


                        </LinearLayout>






                    </RelativeLayout>



                </LinearLayout>



            </LinearLayout>


                <com.example.dufangyu.lecatapp.customview.MyTextView
                    android:id="@+id/exitlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin20"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginLeft="@dimen/margin20"
                    android:background="@drawable/exit_selector"
                    android:padding="@dimen/margin10"
                    android:clickable="true"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/exitLogin"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text16" />
        </LinearLayout>
    </ScrollView>










</LinearLayout>